examples/test/testpolicy13736.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13736
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key35: value37
      key44: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value44
      podSelector:
        matchLabels:
          key18: value9
          key1: value17
